--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 <article class="artigo-secao">
     <h2>Article</h2>
 </article>
-<aside class="secao-direta">
-    <h2>Aside</h2>
-</aside>
 </main>
+<div>
+    <aside class="secao-direta">
+        <h2>Aside</h2>
+    </aside>
+</div>
 <footer class="Rodape">
     <h2>Footer</h2>
 </footer>
